apps/services/plex/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: overseerr
  name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: overseerr
    spec:
      containers:
        - env:
            - name: LOG_LEVEL
              value: debug
            - name: PORT
              value: "5055"
            - name: TZ
              value: America/New_York
          image: sctx/overseerr
          name: overseerr
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: overseerr-config
      restartPolicy: Always
      volumes:
        - name: overseerr-config
          persistentVolumeClaim:
            claimName: overseerr-config
